# lifespan-0.01

./: .gitignore  .windsurfrules  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
.codex/skills/lifespan-execution-discipline/: SKILL.md
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-04-09_00-20-18Z-at-h-lifespan-0.md  2026-04-09_07-18-52Z-position-design-spec-card.md
docs/: README.md
docs/01-design/: 00-system-charter-20260409.md  01-doc-first-development-governance-20260409.md  02-governance-tooling-and-environment-bootstrap-charter-20260409.md  03-historical-ledger-shared-contract-charter-20260409.md  04-doc-first-gating-checker-charter-20260409.md  α-system-roadmap-and-progress-tracker-charter-20260409.md
docs/01-design/modules/: README.md
docs/02-spec/: 00-repo-layout-and-docflow-spec-20260409.md  01-doc-first-task-gating-spec-20260409.md  02-governance-tooling-and-environment-bootstrap-spec-20260409.md  03-historical-ledger-shared-contract-spec-20260409.md  04-doc-first-gating-checker-spec-20260409.md  Ω-system-delivery-roadmap-20260409.md  β-system-roadmap-and-progress-tracker-spec-20260409.md
docs/03-execution/: 00-card-execution-discipline-20260409.md  00-card-template-20260409.md  00-conclusion-catalog-20260409.md  00-conclusion-template-20260409.md  00-evidence-template-20260409.md  00-execution-reading-order-20260409.md  00-record-template-20260409.md  01-governance-tooling-and-environment-bootstrap-card-20260409.md  01-governance-tooling-and-environment-bootstrap-conclusion-20260409.md  02-shared-ledger-contract-and-pytest-path-fix-card-20260409.md  02-shared-ledger-contract-and-pytest-path-fix-conclusion-20260409.md  03-doc-first-gating-checker-card-20260409.md  03-doc-first-gating-checker-conclusion-20260409.md  04-module-lessons-and-execution-index-rename-card-20260409.md  04-module-lessons-and-execution-index-rename-conclusion-20260409.md  05-system-roadmap-and-progress-tracker-card-20260409.md  05-system-roadmap-and-progress-tracker-conclusion-20260409.md  06-roadmap-legacy-module-absorption-card-20260409.md  06-roadmap-legacy-module-absorption-conclusion-20260409.md  07-position-funding-management-and-exit-contract-card-20260409.md  07-position-funding-management-and-exit-contract-conclusion-20260409.md  08-position-ledger-table-family-bootstrap-card-20260409.md  08-position-ledger-table-family-bootstrap-conclusion-20260409.md  09-position-formal-signal-runner-and-bounded-validation-card-20260409.md  09-position-formal-signal-runner-and-bounded-validation-conclusion-20260409.md  10-alpha-formal-signal-contract-and-producer-card-20260409.md  10-alpha-formal-signal-contract-and-producer-conclusion-20260409.md  100-trade-signal-anchor-contract-freeze-card-20260411.md  100-trade-signal-anchor-contract-freeze-conclusion-20260411.md  101-position-entry-t-plus-1-open-reference-price-correction-card-20260411.md  101-position-entry-t-plus-1-open-reference-price-correction-conclusion-20260411.md  102-trade-exit-pnl-ledger-bootstrap-card-20260411.md  102-trade-exit-pnl-ledger-bootstrap-conclusion-20260411.md  103-trade-backtest-progression-runner-card-20260411.md  103-trade-backtest-progression-runner-conclusion-20260411.md  104-mainline-real-data-smoke-regression-card-20260411.md  104-mainline-real-data-smoke-regression-conclusion-20260411.md  105-system-runtime-orchestration-bootstrap-card-20260411.md  105-system-runtime-orchestration-bootstrap-conclusion-20260411.md  11-structure-filter-formal-contract-and-minimal-snapshot-card-20260409.md  (+212 more)
docs/03-execution/evidence/: 00-evidence-catalog-20260409.md  01-governance-tooling-and-environment-bootstrap-evidence-20260409.md  02-shared-ledger-contract-and-pytest-path-fix-evidence-20260409.md  03-doc-first-gating-checker-evidence-20260409.md  04-module-lessons-and-execution-index-rename-evidence-20260409.md  05-system-roadmap-and-progress-tracker-evidence-20260409.md  06-roadmap-legacy-module-absorption-evidence-20260409.md  07-position-funding-management-and-exit-contract-evidence-20260409.md  08-position-ledger-table-family-bootstrap-evidence-20260409.md  09-position-formal-signal-runner-and-bounded-validation-evidence-20260409.md  10-alpha-formal-signal-contract-and-producer-evidence-20260409.md  100-trade-signal-anchor-contract-freeze-evidence-20260411.md  101-position-entry-t-plus-1-open-reference-price-correction-evidence-20260411.md  102-trade-exit-pnl-ledger-bootstrap-evidence-20260411.md  103-trade-backtest-progression-runner-evidence-20260411.md  (+89 more)
docs/04-reference/: README.md  legacy-review-opinion-reconciliation-20260409.md  Γ-legacy-module-source-grounding-map-20260409.md
scripts/: README.md
scripts/alpha/: run_alpha_family_build.py  run_alpha_formal_signal_build.py  run_alpha_pas_five_trigger_build.py  run_alpha_trigger_ledger_build.py
scripts/data/: run_mainline_local_ledger_incremental_sync.py  run_mainline_local_ledger_standardization_bootstrap.py  run_market_base_build.py  run_tdx_asset_raw_ingest.py  run_tdx_stock_raw_ingest.py  run_tdxquant_daily_raw_sync.py  run_timeframe_split_tail_cleanup.py  run_tushare_objective_profile_materialization.py  run_tushare_objective_source_sync.py
scripts/filter/: run_filter_objective_coverage_audit.py  run_filter_snapshot_build.py
scripts/malf/: run_malf_canonical_build.py  run_malf_mechanism_build.py  run_malf_snapshot_build.py  run_malf_wave_life_build.py  run_malf_zero_one_wave_audit.py
scripts/portfolio_plan/: run_portfolio_plan_build.py
scripts/position/: run_position_formal_signal_materialization.py
scripts/setup/: enter_repo.ps1  rebuild_windows_env.ps1
scripts/structure/: run_structure_snapshot_build.py
scripts/system/: check_chinese_governance.py  check_development_governance.py  check_doc_first_gating_governance.py  check_entry_freshness_governance.py  check_file_length_governance.py  check_repo_hygiene_governance.py  development_governance_legacy_backlog.py  run_system_mainline_readout_build.py
scripts/trade/: run_trade_runtime_build.py
src/mlq/: __init__.py
tests/unit/: __init__.py
(+408 files in other folders)
