[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "lifespan-0.01"
version = "0.1.0"
description = "Local-first historical ledger system with pure-semantic malf core, read-only mechanism and wave-life sidecars, and official system readout audit ledgers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.2.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pre-commit>=4.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlq"]

[tool.pytest.ini_options]
# pytest 临时产物固定外置到 H:\Lifespan-temp；正式实现前仍需通过文档先行硬门禁。
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=H:/Lifespan-temp/pytest-tmp"
cache_dir = "H:/Lifespan-temp/pytest-cache"

[tool.mlq.governance]
# 全仓治理盘点允许通过 `scripts/system/development_governance_legacy_backlog.py` 显式登记历史债务，但按改动路径触发的严格检查不得豁免新增违规。
# `scripts/malf/run_malf_wave_life_build.py` 的外部正式入口保持不变；实现可拆分为 `wave_life_runner.py` 与同目录 helper 模块。
# `scripts/system/run_system_mainline_readout_build.py` 的外部正式入口保持不变；实现可拆分为 `runner.py` 与同目录 readout helper 模块。
# 当前 malf 口径：`pivot-confirmed break` 与 `same-timeframe stats sidecar` 只属于只读机制层 sidecar，不得回写 `malf core`。
execution_index_files = [
    "docs/03-execution/A-execution-reading-order-20260409.md",
    "docs/03-execution/B-card-catalog-20260409.md",
    "docs/03-execution/C-system-completion-ledger-20260409.md",
]
# 系统路线图文件不仅追踪阶段进度，也承担老仓来源分层、模块继承方式与置信度口径。
system_tracker_files = [
    "docs/01-design/α-system-roadmap-and-progress-tracker-charter-20260409.md",
    "docs/02-spec/β-system-roadmap-and-progress-tracker-spec-20260409.md",
    "docs/02-spec/Ω-system-delivery-roadmap-20260409.md",
]
# 当前最新生效结论已推进到 36；当前待施工卡已推进到 37，且已清掉 `src/mlq/system/runner.py`、`src/mlq/trade/runner.py`、`src/mlq/alpha/trigger_runner.py`、`src/mlq/filter/runner.py`、`src/mlq/malf/mechanism_runner.py`、`src/mlq/malf/canonical_runner.py`、`src/mlq/structure/runner.py`、`src/mlq/alpha/runner.py`、`src/mlq/data/runner.py`、`tests/unit/data/test_data_runner.py`、`src/mlq/data/bootstrap.py`、`src/mlq/malf/runner.py` 与 `src/mlq/malf/bootstrap.py`；当前 `LEGACY_TARGET_OVERSIZE_BACKLOG` 剩 `2` 项。`structure / filter / alpha` 已对齐 canonical `malf` 与寿命 sidecar，`100-105` 仍作为后续 trade/system 卡组，`position / trade` 的正式执行口径固定为 `adjust_method='none'`。
# `37` 卡的 pytest 证据统一按串行命令执行，避免多个进程争用 `H:/Lifespan-temp/pytest-tmp`。
formal_runner_scripts = [
    "scripts/data/run_tdx_asset_raw_ingest.py",
    "scripts/data/run_tdx_stock_raw_ingest.py",
    "scripts/data/run_tdxquant_daily_raw_sync.py",
    "scripts/data/run_market_base_build.py",
    "scripts/malf/run_malf_canonical_build.py",
    "scripts/malf/run_malf_snapshot_build.py",
    "scripts/malf/run_malf_mechanism_build.py",
    "scripts/malf/run_malf_wave_life_build.py",
    "scripts/alpha/run_alpha_trigger_ledger_build.py",
    "scripts/alpha/run_alpha_family_build.py",
    "scripts/structure/run_structure_snapshot_build.py",
    "scripts/filter/run_filter_snapshot_build.py",
    "scripts/alpha/run_alpha_formal_signal_build.py",
    "scripts/position/run_position_formal_signal_materialization.py",
    "scripts/portfolio_plan/run_portfolio_plan_build.py",
    "scripts/trade/run_trade_runtime_build.py",
    "scripts/system/run_system_mainline_readout_build.py",
]
document_diagram_required = true
diagram_preferred_doc_types = ["design", "spec", "execution-card", "conclusion"]

[tool.mlq.ledger_governance]
stable_entity_anchor = "asset_type+code"
name_is_not_primary_key = true
run_id_is_audit_only = true
required_card_ledger_fields = [
    "实体锚点",
    "业务自然键",
    "批量建仓",
    "增量更新",
    "断点续跑",
    "审计账本",
]
