[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "lifespan-0.01"
version = "0.1.0"
description = "Local-first historical ledger system with data-grade upstream ledgers, official filter objective-gate inputs, MALF-driven position planning, and execution readout audit ledgers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.2.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pre-commit>=4.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlq"]

[tool.pytest.ini_options]
# pytest 临时产物固定外置到 H:\Lifespan-temp；正式实现前仍需通过文档先行硬门禁。
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=H:/Lifespan-temp/pytest-tmp"
cache_dir = "H:/Lifespan-temp/pytest-cache"

[tool.mlq.governance]
# 全仓治理盘点允许通过 `scripts/system/development_governance_legacy_backlog.py` 显式登记历史债务，
# 但按改动路径触发的严格检查不得豁免新增违规。
# `scripts/malf/run_malf_wave_life_build.py` 的外部正式入口保持不变；实现可拆分为
# `wave_life_runner.py` 与同目录 helper 模块；正式 CLI 必须显式二选一：
# bounded bootstrap 或 `--use-checkpoint-queue`。
# `scripts/alpha/run_alpha_formal_signal_build.py` 现可只读接入 `malf_wave_life_snapshot`；
# `stage_percentile_*` 仅代表解释性 sidecar，不在 `64` 内直接改写 admission authority。
# `scripts/system/run_system_mainline_readout_build.py` 的外部正式入口保持不变；实现可拆分为
# `runner.py` 与同目录 readout helper 模块。
# 当前 malf 口径：`pivot-confirmed break` 与 `same-timeframe stats sidecar` 只属于只读机制层 sidecar，
# 不得回写 `malf core`。
execution_index_files = [
    "docs/03-execution/A-execution-reading-order-20260409.md",
    "docs/03-execution/B-card-catalog-20260409.md",
    "docs/03-execution/C-system-completion-ledger-20260409.md",
]
# 系统路线图文件既承担阶段追踪，也承担模块继承方式、实现深度与后半部施工蓝图口径。
system_tracker_files = [
    "docs/01-design/α-system-roadmap-and-progress-tracker-charter-20260409.md",
    "docs/02-spec/β-system-roadmap-and-progress-tracker-spec-20260409.md",
    "docs/02-spec/Ω-system-delivery-roadmap-20260409.md",
]
# 当前最新生效结论已推进到
# `68-execution-doc-layout-governance-restoration-conclusion-20260415.md`；
# 当前待施工卡已切到 `69-filter-objective-tradability-and-universe-gate-freeze-card-20260415.md`。
# 系统路线图现以 `28` 为统一 data-grade 基线，`60 -> 66` 已完成主线整改与恢复闸门，
# 当前已完成 `67` 的历史 file-length 治理债务与 `68` 的执行文档目录治理；当前插入 `69` 冻结 `filter` 的客观可交易性与标的宇宙 gate，之后恢复 `80 -> 86` official middle-ledger 卡组，最后在 `86` 接受后恢复
# `100 -> 105` trade/system 卡组；其中 `position / trade` 的正式执行口径继续固定为
# `adjust_method='none'`。
# `docs/03-execution/` 根目录只允许保留 `card / conclusion / index / template / README`；
# 正式 `evidence / record` 必须分别位于 `docs/03-execution/evidence/` 与
# `docs/03-execution/records/`。
# `37` 卡后的 pytest 证据统一按串行命令执行，避免多个进程争用 `H:/Lifespan-temp/pytest-tmp`。
formal_runner_scripts = [
    "scripts/data/run_tdx_asset_raw_ingest.py",
    "scripts/data/run_tdx_stock_raw_ingest.py",
    "scripts/data/run_tdxquant_daily_raw_sync.py",
    "scripts/data/run_tushare_objective_source_sync.py",
    "scripts/data/run_tushare_objective_profile_materialization.py",
    "scripts/data/run_market_base_build.py",
    "scripts/data/run_mainline_local_ledger_standardization_bootstrap.py",
    "scripts/data/run_mainline_local_ledger_incremental_sync.py",
    "scripts/malf/run_malf_canonical_build.py",
    "scripts/malf/run_malf_snapshot_build.py",
    "scripts/malf/run_malf_mechanism_build.py",
    "scripts/malf/run_malf_wave_life_build.py",
    "scripts/alpha/run_alpha_pas_five_trigger_build.py",
    "scripts/alpha/run_alpha_trigger_ledger_build.py",
    "scripts/alpha/run_alpha_family_build.py",
    "scripts/structure/run_structure_snapshot_build.py",
    "scripts/filter/run_filter_snapshot_build.py",
    "scripts/alpha/run_alpha_formal_signal_build.py",
    "scripts/position/run_position_formal_signal_materialization.py",
    "scripts/portfolio_plan/run_portfolio_plan_build.py",
    "scripts/trade/run_trade_runtime_build.py",
    "scripts/system/run_system_mainline_readout_build.py",
]
formal_readonly_audit_scripts = [
    "scripts/filter/run_filter_objective_coverage_audit.py",
]
document_diagram_required = true
diagram_preferred_doc_types = ["design", "spec", "execution-card", "conclusion"]

[tool.mlq.ledger_governance]
stable_entity_anchor = "asset_type+code"
name_is_not_primary_key = true
run_id_is_audit_only = true
required_card_ledger_fields = [
    "实体锚点",
    "业务自然键",
    "批量建仓",
    "增量更新",
    "断点续跑",
    "审计账本",
]
